asset/style/site.scss
---
---

// NOTE: all these styles are temporary! When somebody
// actually comes along and designs this site, they
// should most likely tear this all down.

@import "vendor/normalize";


// Config
// ------

$font-size: 16px;
$font-size-small: 14px;

$font-family: Arial, Helvetica, sans-serif;
$font-family-mono: Courier, "Courier New", "Lucida Sans Typewriter", "Lucida Typewriter", monospace;

$spacing: 20px;
$spacing-small: 10px;
$spacing-large: 40px;
$spacing-rule: 2px;

$c-blue: #3498db;
$c-blue-dark: darken($c-blue, 20%);

$c-grey: #6c7878;
$c-grey-light: #ddd;
$c-grey-lighter: lighten($c-grey-light, 10%);
$c-grey-dark: #222;



$c-purple: #8a34db;
$c-purple-dark: darken($c-purple, 20%);

$c-red: #e74c3c;

$c-yellow: #f39c12;
$c-yellow-light: lighten($c-yellow, 35%);


// Site Styles
// -----------

@import "typography";
@import "header";

// Clearfix mixin
@mixin clearfix {
	&:after {
		content: " ";
		display: block;
		clear: both;
	}
}
.clearfix {
	@include clearfix;
}
.visually-hidden {
	display: none;
}
// Page width/positioning
.page {
	max-width: 700px;
	margin: 0 auto;
	padding: $spacing;
}

// Construction notice
.construction-notice {
	margin-bottom: $spacing;
	padding: $spacing-small;
	background-color: $c-yellow-light;
}
.construction-notice__content {
	margin: 0;
	font-size: $font-size-small;
}

// Site header
.site-header {
	margin-bottom: $spacing-large;
	padding-bottom: $spacing-small;
	border-bottom: $spacing-rule dotted $c-grey-light;
}

// Site branding
.site-brand,
.site-brand:visited {
	display: block;
	line-height: 30px;
	margin-bottom: $spacing;
	text-decoration: none;
	color: inherit;
}
.site-brand__logo,
.site-brand__name {
	vertical-align: middle;
}
.site-brand__logo {
	width: 60px;
	height: 60px;
	margin-left: -8px;
}

// Site navigation
.site-navigation {
	list-style: none;
	padding-left: 0;
}
.site-navigation__subnav {
	list-style: none;
	padding-left: $spacing;
}
.site-navigation__item--current > a {
	background-color: $c-yellow-light;
}

// Site footer
.site-footer {
	margin-top: $spacing-large * 2;
	padding-top: $spacing-small;
	border-top: $spacing-rule dotted #ccc;
	@include clearfix;
}
.site-footer__navigation,
.site-footer__copyright {
	float: left;
	width: 50%;

	@media all and (max-width: 600px) {
		float: none;
		width: auto;
	}
}

// Repo list
.repo-list__repo {
	margin-bottom: $spacing;
}
.repo-list__repo__description {
	margin-bottom: 0;
}

// Team list
.team-list__member {
	margin-bottom: $spacing;
}
.team-list__member__role {
	margin-bottom: 0;
}

